WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54480
REGRESSION (WebKit2): A web page remains unresponsive for a long time after printing
https://bugs.webkit.org/show_bug.cgi?id=54480
Summary
REGRESSION (WebKit2): A web page remains unresponsive for a long time after p...
Alexey Proskuryakov
Reported
2011-02-15 11:38:48 PST
I can't select, scroll etc for several seconds after dismissing print dialog, even on a small page. Steps to reproduce: 1. Open
http://www.apple.com/hotnews/
2. Cmd+P, Cancel. 3. Try to select text or drag the scroller. Results: the page remains unresponsive for several seconds <
rdar://problem/8975229
>
Attachments
naive fix
(1.57 KB, patch)
2011-02-15 11:43 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-02-15 11:43:57 PST
Created
attachment 82492
[details]
naive fix I don't understand how painting works between AppKit and WebKit2, and it's quite possible that the root cause lies elsewhere. This seems safe though.
WebKit Review Bot
Comment 2
2011-02-15 11:45:40 PST
Attachment 82492
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebKit2/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2011-02-15 12:06:53 PST
Comment on
attachment 82492
[details]
naive fix Ideally we’d want to trigger the display timer, not immediate display. So this is a workaround for a bug not a real fix.
Alexey Proskuryakov
Comment 4
2011-02-15 12:18:37 PST
One thing that's good about displaying immediately is that we start relayout when going back to screen mode, so drawing the latest bits from before printing is better than drawing new ones after a short period of time. What's surprising to me is that actions like selecting text on page or even scrolling don't make WebCore call invalidateContentsAndWindow().
Alexey Proskuryakov
Comment 5
2011-02-15 12:37:38 PST
Committed <
http://trac.webkit.org/changeset/78603
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug