        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=54480
        <rdar://problem/8975229> REGRESSION (WebKit2): A web page remains unresponsive for a long
        time after printing

        Nothing was painted until moving the mouse over browser chrome, deactivating the window,
        or taking some other drastic measure like that.

        * UIProcess/API/mac/PageClientImpl.mm: (WebKit::PageClientImpl::setAutodisplay):
        Call -[NSView displayIfNeeded] after enabling autodisplay. For some reason, this makes
        WebCore push updates again.



Canonical link: https://commits.webkit.org/68599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78603 268f45cc-cd09-0410-ab3c-d52691b4dbfc